<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/horizontalCheckButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horizontalCheckButton"/>

            <Button
                android:id="@+id/replaceLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replaceLanguage"/>

            <Button
                android:id="@+id/imgGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imgGridView"/>

            <Button
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video"/>

            <Button
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calendar"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
